--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -35,5 +35,13 @@
       	android:text="Play File" 
         android:id="@+id/startButton"
         android:onClick="openFile"/>
-
+    <Button 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/startButton"
+		android:layout_centerHorizontal="true"
+      	android:text="Display File" 
+        android:id="@+id/showButton"
+        android:onClick="openDisplay"/>
+    
 </RelativeLayout>
