--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -4,6 +4,13 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity" >
 
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:id="@+id/originSpinner"
+        android:entries="@array/originEntries"
+        android:drawSelectorOnTop="true"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
@@ -35,7 +42,6 @@
 	        android:entries="@array/urlEntries"
 	        android:id="@+id/spinner"
 	        android:drawSelectorOnTop="true"/>
-	        <!-- android:onClick="spinnerSelected" -->
 	    <EditText 
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
@@ -43,7 +49,6 @@
 			android:layout_centerHorizontal="true"
 	        android:id="@+id/urlBox"
 	        android:hint="@string/urlHint"
-	        android:text="http://www2.engr.arizona.edu/~sprinkjm/work/ece473-573/sampleData01-hw02.txt"
 	        android:layout_marginTop="5dp"
 	        android:layout_marginBottom="5dp"
 	        android:inputType="textUri"/>
@@ -52,7 +57,7 @@
 	        android:layout_height="wrap_content"
 	        android:layout_below="@id/urlBox"
 			android:layout_centerHorizontal="true"
-	      	android:text="Play File" 
+	      	android:text="View File" 
 	        android:id="@+id/startButton"
 	        android:layout_marginTop="5dp"
 	        android:layout_marginBottom="5dp"
@@ -62,7 +67,7 @@
 	        android:layout_height="wrap_content"
 	        android:layout_below="@id/startButton"
 			android:layout_centerHorizontal="true"
-	      	android:text="Display File" 
+	      	android:text="Animate File" 
 	        android:id="@+id/showButton"
 	        android:layout_marginTop="5dp"
 	        android:layout_marginBottom="5dp"
