--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
 	        android:id="@+id/sampleLinkSpinner"
 	        android:drawSelectorOnTop="true"/>
 	    <EditText 
-	        android:layout_width="wrap_content"
+	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        android:layout_below="@id/sampleLinkSpinner"
 			android:layout_centerHorizontal="true"
